Chat : premiere partie

--- a/front/your-car-ui/src/app/components/home/home/home.component.html
+++ b/front/your-car-ui/src/app/components/home/home/home.component.html
@@ -1,4 +1,7 @@
 <div class="home-container">
     <button mat-button (click)="logout()">Se déconnecter</button>
-    <h1>Bienvenue!</h1>
+    <h1>Your Car Your Way</h1>
+    <div class="chat-button-container">
+        <button mat-raised-button color="primary" (click)="openChat()">Ouvrir le Chat</button>
+    </div>
 </div>
