--- a/front/your-car-ui/src/app/components/home/home/home.component.css
+++ b/front/your-car-ui/src/app/components/home/home/home.component.css
@@ -1,19 +1,29 @@
 .home-container {
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; /* Centrer les enfants horizontalement */
+    justify-content: center; /* Centre verticalement */
     padding: 20px;
+    height: 100vh; /* Remplir la hauteur de la fenêtre */
+    position: relative; /* Permet de positionner des éléments à l'intérieur si nécessaire */
 }
 
 button {
-    margin-top: 20px; 
-    border: 2px solid red; 
+    margin: 20px; /* Ajoute un espacement autour des boutons */
+    border: 2px solid red;
     border-radius: 5px;
     background-color: transparent;
-    color: red; 
-    padding: 10px 20px; 
-    top: 10px; 
+    color: red;
+    padding: 10px 20px;
     cursor: pointer;
-    margin-bottom: 20px;
 }
 
 button:hover {
-    background-color: rgba(255, 0, 0, 0.1); /* Change la couleur d'arrière-plan au survol */
+    background-color: rgba(255, 0, 0, 0.1); 
+}
+
+h1 {
+    margin-top: 20px; /* Réduisez l'espace au-dessus du titre si nécessaire */
+    text-align: center; 
+    color: black; 
 }
