--- a/front/your-car-ui/src/app/components/chat/chat-user/chat-user.component.css
+++ b/front/your-car-ui/src/app/components/chat/chat-user/chat-user.component.css
@@ -1,10 +1,11 @@
-/* Container principal du chat */
 .chat-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
-    max-width: 600px;
+    max-height: 800px;
+    width: 90%; 
+    max-width: 900px; 
     margin: 0 auto;
     border: 1px solid #ddd;
     border-radius: 8px;
